objects/ssot__CaseProceedingParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseProceedingId__c</fullName>
        <label>Case Proceeding</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingParticipantRole__c</fullName>
        <label>Case Proceeding Participant Role</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingParticipantStatus__c</fullName>
        <label>Case Proceeding Participant Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingParticipationType__c</fullName>
        <label>Case Proceeding Participation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Proceeding Participant Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObjectName__c</fullName>
        <label>Participant Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718543578660_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingParticipant_Participan_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>CaseProceedingParticipant_Participan_rel</relationshipLabel>
        <relationshipName>rel_1718543578660_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718544752095_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingParticipant_Participan_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>CaseProceedingParticipant_Participan_rel</relationshipLabel>
        <relationshipName>rel_1718544752095_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549029344_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingParticipant_CaseProcee_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CaseProceedingParticipant_CaseProcee_rel</relationshipLabel>
        <relationshipName>rel_1718549029344_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>